<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup
        android:id="@+id/act3_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="124dp" >

        <RadioButton
            android:id="@+id/act3_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/act3_easy_string" />

        <RadioButton
            android:id="@+id/act3_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act3_normal_string" />

        <RadioButton
            android:id="@+id/act3_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act3_hard_string" />
    </RadioGroup>

    <TextView
        android:id="@+id/act4_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/act3_selectlv_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/act3_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="78dp"
        android:layout_toRightOf="@+id/act3_mode"
        android:text="@string/act1_dir_ok_string" />

</RelativeLayout>
