<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/main_learning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:text="@string/main_learning_string" />

    <Button
        android:id="@+id/main_test"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_learning"
        android:layout_below="@+id/main_learning"
        android:layout_marginTop="54dp"
        android:text="@string/main_test_string" />

    <Button
        android:id="@+id/main_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_test"
        android:layout_below="@+id/main_test"
        android:layout_marginTop="54dp"
        android:text="@string/main_end_string" />

</RelativeLayout>
